# color-sort-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  webapp.py
.github/workflows/: publish-to-testpypi.yml
game/: constants.py  display.py  game_logic.py  main.py
templates/: index.html
