[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "color-sort-game"
version = "1.0.5"
description = "A CLI-based color sorting game."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Jay Gupta" }
]
license = { file = "LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "tabulate",
    "colorama"
]

[project.urls]
"Github" = "https://github.com/jaygupta-2k/color-sort-cli.git"

[project.scripts]
color-sort = "game.main:main"